
* Fixed an error when a link was badly nested in parentheses. #55

* Fixed an error on superscript/subscript parenthetical phrase. #56

* Fixed bold phrases starting with a number being recognized as unordered lists. #60

* Fixed behavior of unclosed (multi-paragraph) quotes and incorrect handling of links inside double quotations. #59, #63


*4.0.3 (August 18, 2008)*

* Fix NoMethodError: private method gsub!' called for nil:NilClass when two dimensions followed by a space. #38

* Fixed unititialized constant RedCloth::TextileDoc with Rails 2.1.  Came from a workaround for Rails bug #320 that was applied even when not necessary. #42


*4.0.2 (August 15, 2008)*

* Fixed link references/aliases not being recognized when they include hyphens. #36

* Dimensions in feet and inches use correct typographic characters. #25

* Limit overzealous superscript and subscript.  Sup/sub phrases must be surrounded by spaces or square brackets, as in Textile 2. #35

* Fixed HTML before tables causing the opening table tag to be emitted twice. #33

* Cleaned up unused code that was causing a warning. #28

* Workaround for Rails 2.1 bug that loads a previous version of RedCloth before loading the unpacked gem.  Has since been fixed in edge rails. #30

* Added a RedCloth::VERSION.to_s and .== methods so you can puts and compare RedCloth::VERSION just like in previous RedCloth releases. #26

* Fixed HTML block ending tags terminating blocks prematurely. #22


*4.0.1 (July 24, 2008)*

* Fixed lines starting with dashes being recognized as a definition list when there were no definitions.

* Created alias RedCloth.rb so Rails 2.1 gem dependency works on case-sensitive operating systems	.
* Fixed parsing sentences that had two em dashes surrounded by spaces from becoming del phrases. #19

* Fixed links including prior quoted phrases. #17


*4.0.0 (July 21, 2008)*

* New SuperRedCloth (RedCloth 4.0) is a total rewrite using Ragel for the parsing.

* Markdown support has been removed.
